--- a/DylanChan_MarioCraft_Phase3/DylanChan_MarioCraft_Phase3/DylanChan_MarioCraft_Phase3.csproj
+++ b/DylanChan_MarioCraft_Phase3/DylanChan_MarioCraft_Phase3/DylanChan_MarioCraft_Phase3.csproj
@@ -74,6 +74,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="frmRegisterMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmRegisterMenu.Designer.cs">
+      <DependentUpon>frmRegisterMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="GAMEUSERDETAIL.cs" />
     <Compile Include="RUCKSACK.cs" />
     <Compile Include="TOOL.cs" />
@@ -109,6 +115,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="frmRegisterMenu.resx">
+      <DependentUpon>frmRegisterMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
