--- a/DylanChan_MarioCraft_Phase3/DylanChan_MarioCraft_Phase3/DylanChan_MarioCraft_Phase3.csproj
+++ b/DylanChan_MarioCraft_Phase3/DylanChan_MarioCraft_Phase3/DylanChan_MarioCraft_Phase3.csproj
@@ -74,6 +74,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="frmLoginMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmLoginMenu.Designer.cs">
+      <DependentUpon>frmLoginMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmRegisterMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +121,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="frmLoginMenu.resx">
+      <DependentUpon>frmLoginMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmRegisterMenu.resx">
       <DependentUpon>frmRegisterMenu.cs</DependentUpon>
     </EmbeddedResource>
@@ -131,6 +140,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MarioCraft.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MarioCraftLogin.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MarioCraftReg.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
