--- a/DylanChan_MarioCraft_Phase3/DylanChan_MarioCraft_Phase3/DylanChan_MarioCraft_Phase3.csproj
+++ b/DylanChan_MarioCraft_Phase3/DylanChan_MarioCraft_Phase3/DylanChan_MarioCraft_Phase3.csproj
@@ -87,6 +87,12 @@
       <DependentUpon>frmRegisterMenu.cs</DependentUpon>
     </Compile>
     <Compile Include="GAMEUSERDETAIL.cs" />
+    <Compile Include="frmGameUserMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGameUserMenu.Designer.cs">
+      <DependentUpon>frmGameUserMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="RUCKSACK.cs" />
     <Compile Include="TOOL.cs" />
     <Page Include="MainWindow.xaml">
@@ -127,6 +133,9 @@
     <EmbeddedResource Include="frmRegisterMenu.resx">
       <DependentUpon>frmRegisterMenu.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmGameUserMenu.resx">
+      <DependentUpon>frmGameUserMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -149,6 +158,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\MarioCraftReg.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Mario-Wallpaper.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
